# envcmp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: CNAME  index.html
src/envcmp/: cli.py  config.py  differ.py  models.py  utils.py
src/envcmp/providers/: base.py  env_file.py  github.py  gitlab.py  terraform.py  vault.py
src/piped/: cli.py  config.py  differ.py  models.py
src/piped/providers/: base.py  env_file.py  github.py  gitlab.py  terraform.py
tests/integration/: conftest.py  test_diff_integration.py  test_vault_integration.py
tests/security/: test_secret_exposure.py
tests/unit/: test_base_provider.py  test_cli.py  test_config.py  test_differ.py  test_env_file.py  test_github.py  test_gitlab.py  test_models.py  test_terraform.py  test_utils.py  test_vault.py
