[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piped"
version = "0.1.0"
description = "Sync CI/CD variables and secrets between platforms"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.8",
]

[project.scripts]
piped = "piped.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/piped"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "S", "B", "UP"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "N802"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/piped",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "-v",
]

[tool.coverage.run]
source = ["src/piped"]
branch = true

[tool.mypy]
python_version = "3.12"
strict = true