[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envcmp"
version = "0.1.0"
description = "Sync CI/CD variables and secrets between platforms"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.8",
    "pip-audit>=2.10.0",
    "cryptography>=42.0.0",
]

[project.scripts]
envcmp = "envcmp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/envcmp"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "S", "B", "UP"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "N802"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/envcmp",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "-v",
]

[tool.coverage.run]
source = ["src/envcmp"]
branch = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["hvac.*", "apscheduler.*", "kubernetes.*", "cryptography.*", "dotenv.*"]
ignore_missing_imports = true